feat: change deployment trigger branch from development to main

--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -3,7 +3,7 @@ name: Auto deploy sofia-chat-backend-v2 development in VPS
 on:
   push:
     branches:
-      - development
+      - main
     paths:
       - '.github/workflows/**'
       - 'index.html'
