--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "handlebars": "^4.7.8",
     "moment-timezone": "^0.5.45",
     "nest-winston": "^1.9.4",
+    "openai": "^4.73.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
