--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.20",
     "typevert": "^0.9.11",
-    "winston-syslog": "^2.7.0"
+    "winston-syslog": "^2.7.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.9",
