--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ postgresdb
 uploads/assets/*
 !uploads/assets/icon-chat.png
 !uploads/assets/icon-close.png
+!uploads/assets/icon-arrow.png
 !uploads/assets/index.html
 
 uploads/logos/*
