--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "date-fns": "^3.6.0",
     "dd-trace": "^5.2.0",
     "device-detector-js": "^3.0.3",
+    "facebook-nodejs-business-sdk": "^21.0.5",
     "handlebars": "^4.7.8",
     "moment-timezone": "^0.5.45",
     "nest-winston": "^1.9.4",
