--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -56,6 +56,7 @@ jobs:
             FACEBOOK_APP_SECRET=${{ secrets.FACEBOOK_APP_SECRET }}
             FACEBOOK_WEBHOOK_SECRET=${{ secrets.FACEBOOK_WEBHOOK_SECRET }}
             FACEBOOK_GRAPH_API=${{ secrets.FACEBOOK_GRAPH_API }}
+            APP_URL=${{ secrets.APP_URL }}
             EOF
             docker-compose build
             docker-compose down -v
