--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "get-mp3-duration": "^1.0.0",
     "handlebars": "^4.7.8",
+    "mailgun.js": "^11.1.0",
     "moment-timezone": "^0.5.45",
     "nest-winston": "^1.9.4",
     "openai": "^4.73.1",
