--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "build:chat": "npx babel src/infrastructure/template/web-chat.js --out-file uploads/scripts/chat.min.js --presets=@babel/preset-env --minified"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.39.0",
     "@nestjs-modules/mailer": "^1.11.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
