--- a/package.json
+++ b/package.json
@@ -47,10 +47,13 @@
     "get-mp3-duration": "^1.0.0",
     "handlebars": "^4.7.8",
     "mailgun.js": "^11.1.0",
+    "mammoth": "^1.9.0",
     "moment-timezone": "^0.5.45",
     "nest-winston": "^1.9.4",
     "openai": "^4.73.1",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
+    "pptx2json": "^0.0.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.4",
