--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "openai": "^4.73.1",
     "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
+    "pgvector": "^0.2.0",
     "pptx2json": "^0.0.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
