--- a/package.json
+++ b/package.json
@@ -48,11 +48,9 @@
     "handlebars": "^4.7.8",
     "mailgun.js": "^11.1.0",
     "mammoth": "^1.9.0",
-    "mathjs": "^14.3.1",
     "moment-timezone": "^0.5.45",
     "nest-winston": "^1.9.4",
-    "numjs": "^0.16.1",
-    "openai": "^4.73.1",
+    "openai": "4.73.1",
     "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
     "pgvector": "^0.2.0",
