--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install dependencies
+        run: npm install ts-node @types/node
+
       - name: Install pgvector
         run: npx ts-node src/config/install-pgvector.ts
 
