--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -23,6 +23,19 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install dependencies
+        run: npm install pg
+
+      - name: Install pgvector on server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DEV_SSH_HOST }}
+          username: ${{ secrets.DEV_SSH_USERNAME }}
+          key: ${{ secrets.DEV_SSH_PRIVATE_KEY }}
+          port: 22
+          script: |
+            sudo apt-get update && sudo apt-get install -y postgresql-16-pgvector
+
       - name: Deploy using ssh
         uses: appleboy/ssh-action@master
         with:
@@ -65,6 +78,7 @@ jobs:
             SLACK_CLIENT_SECRET=${{ secrets.SLACK_CLIENT_SECRET }}
             SLACK_REDIRECT_URI=${{ secrets.SLACK_REDIRECT_URI }}
             EOF
+            node src/config/install-pgvector.js
             docker-compose build
             docker-compose down -v
             docker-compose up -d
