--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "build:chat": "npx babel src/infrastructure/template/web-chat.js --out-file uploads/scripts/chat.min.js --presets=@babel/preset-env --minified"
+    "build:chat": "npx babel src/infrastructure/template/web-chat.js --out-file uploads/scripts/chat.min.js --presets=@babel/preset-env --minified",
+    "migration:generate": "npx ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate -d typeorm.config.ts src/migrations/$npm_config_name"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
