--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/websockets": "^10.3.3",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "crypto-js": "^4.2.0",
@@ -49,6 +50,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "get-mp3-duration": "^1.0.0",
     "handlebars": "^4.7.8",
+    "html-to-text": "^9.0.5",
     "mailgun.js": "^11.1.0",
     "mammoth": "^1.9.0",
     "moment-timezone": "^0.5.45",
