Simplify Blue-Green deployment workflow
This commit simplifies and improves the Blue-Green deployment workflow by:

- Consolidating deployment scripts into a single simplified script
- Adding new workflow actions (deploy/switch/rollback/status)
- Improving container health checks and status reporting
- Using consistent port mapping (3001/3002) for Blue/Green slots
- Adding proper environment configuration and container dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,69 @@
 version: '3.7'
+
 services:
+  # Blue Environment (Default/Primary)
+  sofia-chat-backend-blue:
+    container_name: sofia-chat-backend-blue
+    build:
+      dockerfile: Dockerfile
+      context: .
+    restart: always
+    env_file:
+      - .env
+    environment:
+      - TYPEORM_HOST=postgres
+      - TYPEORM_PORT=5432
+      - DEPLOYMENT_COLOR=blue
+      - PORT=3001
+    ports:
+      - '3001:3001'
+    networks:
+      - sofia_chat_network
+    volumes:
+      - ./uploads:/app/uploads
+      - ./logs/blue:/app/logs
+    depends_on:
+      - postgres
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  # Green Environment (Secondary/Staging)
+  sofia-chat-backend-green:
+    container_name: sofia-chat-backend-green
+    build:
+      dockerfile: Dockerfile
+      context: .
+    restart: always
+    env_file:
+      - .env
+    environment:
+      - TYPEORM_HOST=postgres
+      - TYPEORM_PORT=5432
+      - DEPLOYMENT_COLOR=green
+      - PORT=3002
+    ports:
+      - '3002:3002'
+    networks:
+      - sofia_chat_network
+    volumes:
+      - ./uploads:/app/uploads
+      - ./logs/green:/app/logs
+    depends_on:
+      - postgres
+    profiles:
+      - green
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3002/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  # Legacy service name for backward compatibility
   sofia-chat-backend-v2:
     container_name: sofia-chat-backend-v2
     build:
@@ -8,12 +72,44 @@ services:
     restart: always
     env_file:
       - .env
+    environment:
+      - TYPEORM_HOST=postgres
+      - TYPEORM_PORT=5432
     ports:
       - '3001:3001'
     networks:
       - sofia_chat_network
     volumes:
       - ./uploads:/app/uploads
+    depends_on:
+      - postgres
+    profiles:
+      - legacy
+
+  postgres:
+    image: pgvector/pgvector:pg16
+    container_name: sofia-chat-postgres
+    restart: always
+    environment:
+      POSTGRES_DB: ${TYPEORM_DB_NAME:-sofia_chat_db}
+      POSTGRES_USER: ${TYPEORM_USERNAME:-postgres}
+      POSTGRES_PASSWORD: ${TYPEORM_PASSWORD}
+    ports:
+      - '5432:5432'
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - sofia_chat_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${TYPEORM_USERNAME:-postgres} -d ${TYPEORM_DB_NAME:-sofia_chat_db}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 networks:
   sofia_chat_network:
+    driver: bridge
+
+volumes:
+  postgres_data:
+    driver: local
