--- a/.github/workflows/deploy-dev-blue-green.yml
+++ b/.github/workflows/deploy-dev-blue-green.yml
@@ -3,7 +3,7 @@ name: Blue-Green Deployment for Sofia Chat Backend
 on:
   push:
     branches:
-      - develop-v1-test
+      - develop-v1
     paths:
       - '.github/workflows/**'
       - 'package.json'
@@ -13,15 +13,16 @@ on:
       - 'docker-compose*.yml'
   workflow_dispatch:
     inputs:
-      force_color:
-        description: 'Force deployment to specific color (blue/green)'
-        required: false
+      action:
+        description: 'Blue-Green action to perform'
+        required: true
         type: choice
         options:
-          - auto
-          - blue
-          - green
-        default: 'auto'
+          - deploy
+          - switch
+          - rollback
+          - status
+        default: 'deploy'
 
 env:
   DEPLOY_HOST: ${{ secrets.DEV2_SSH_HOST }}
@@ -30,7 +31,7 @@ env:
   PROJECT_PATH: /root/repos/sofia-chat-backend-v2
 
 jobs:
-  build-and-deploy:
+  blue-green-deployment:
     runs-on: ubuntu-latest
 
     steps:
@@ -39,30 +40,18 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Generate image tag
-        id: image_tag
-        run: |
-          COMMIT_SHA=$(git rev-parse --short HEAD)
-          TIMESTAMP=$(date +%s)
-          IMAGE_TAG="${COMMIT_SHA}-${TIMESTAMP}"
-          echo "tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
-          echo "commit_sha=$COMMIT_SHA" >> $GITHUB_OUTPUT
-
-      - name: Copy scripts to server
+      - name: Copy blue-green script to server
         uses: appleboy/scp-action@master
         with:
           host: ${{ env.DEPLOY_HOST }}
           username: ${{ env.DEPLOY_USER }}
           key: ${{ env.SSH_KEY }}
           port: 22
-          source: 'scripts/blue-green/*'
-          target: '/opt/sofia-chat/scripts/'
-          strip_components: 2
+          source: 'scripts/blue-green-simple.sh'
+          target: '/opt/sofia-chat/'
+          strip_components: 1
 
-      - name: Make scripts executable
+      - name: Make script executable
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.DEPLOY_HOST }}
@@ -70,43 +59,7 @@ jobs:
           key: ${{ env.SSH_KEY }}
           port: 22
           script: |
-            chmod +x /opt/sofia-chat/scripts/*.sh
-
-      - name: Check current Blue-Green status
-        id: status_check
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ env.DEPLOY_HOST }}
-          username: ${{ env.DEPLOY_USER }}
-          key: ${{ env.SSH_KEY }}
-          port: 22
-          script: |
-            cd ${{ env.PROJECT_PATH }}
-            if [ -f .blue-green-state ]; then
-              CURRENT_STATE=$(cat .blue-green-state)
-            else
-              CURRENT_STATE="blue"
-              echo "blue" > .blue-green-state
-            fi
-
-            # Determine target color
-            if [ "${{ github.event.inputs.force_color }}" = "blue" ]; then
-              TARGET_COLOR="blue"
-            elif [ "${{ github.event.inputs.force_color }}" = "green" ]; then
-              TARGET_COLOR="green"
-            else
-              # Auto mode: deploy to inactive slot
-              if [ "$CURRENT_STATE" = "blue" ]; then
-                TARGET_COLOR="green"
-              else
-                TARGET_COLOR="blue"
-              fi
-            fi
-
-            echo "CURRENT_STATE=$CURRENT_STATE" >> $GITHUB_ENV
-            echo "TARGET_COLOR=$TARGET_COLOR" >> $GITHUB_ENV
-            echo "current_state=$CURRENT_STATE" >> $GITHUB_OUTPUT
-            echo "target_color=$TARGET_COLOR" >> $GITHUB_OUTPUT
+            chmod +x /opt/sofia-chat/blue-green-simple.sh
 
       - name: Update repository and environment
         uses: appleboy/ssh-action@master
@@ -123,8 +76,8 @@ jobs:
             git checkout develop-v1
             git pull origin develop-v1
 
-            # Create environment file
-            cat <<EOF > .env
+            # Create environment file with proper quoting
+            cat > .env << 'ENV_EOF'
             NODE_ENV=development
             LOG_LEVEL=info
             TYPEORM_HOST=${{ secrets.DEV_TYPEORM_HOST }}
@@ -155,13 +108,12 @@ jobs:
             VOYAGE_API_KEY=${{ secrets.DEV_VOYAGE_API_KEY }}
             CLAUDE_API_KEY=${{ secrets.DEV_CLAUDE_API_KEY }}
             CUSTOM_PLAN_REQUEST_RECIPIENT_EMAIL=${{ secrets.DEV_CUSTOM_PLAN_REQUEST_RECIPIENT_EMAIL }}
-            DOCKER_IMAGE_TAG=${{ steps.image_tag.outputs.tag }}
-            EOF
+            ENV_EOF
 
             # Ensure pgvector is installed
             node src/config/install-pgvector.js || true
 
-      - name: Deploy to target slot
+      - name: Execute Blue-Green Action
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.DEPLOY_HOST }}
@@ -170,67 +122,16 @@ jobs:
           port: 22
           script: |
             cd ${{ env.PROJECT_PATH }}
+            
+            # Determine action
+            ACTION="${{ github.event.inputs.action || 'deploy' }}"
+            
+            echo "Ejecutando acción Blue-Green: $ACTION"
+            
+            # Execute the blue-green script
+            /opt/sofia-chat/blue-green-simple.sh $ACTION
 
-            # Get target color from previous step
-            TARGET_COLOR="${{ steps.status_check.outputs.target_color }}"
-
-            echo "Deploying to $TARGET_COLOR slot..."
-
-            # Build new image with unique tag
-            docker build -t sofia-chat-backend:${{ steps.image_tag.outputs.tag }} .
-
-            # Use docker-compose to deploy to target slot
-            if [ "$TARGET_COLOR" = "green" ]; then
-              docker-compose --profile green up -d sofia-chat-backend-green
-            else
-              docker-compose up -d sofia-chat-backend-blue
-            fi
-
-            # Update internal config to point to new slot
-            /opt/sofia-chat/scripts/update-internal-config.sh $TARGET_COLOR
-
-      - name: Verify deployment health
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ env.DEPLOY_HOST }}
-          username: ${{ env.DEPLOY_USER }}
-          key: ${{ env.SSH_KEY }}
-          port: 22
-          script: |
-            TARGET_COLOR="${{ steps.status_check.outputs.target_color }}"
-
-            echo "Verificando salud del deployment en $TARGET_COLOR..."
-
-            # Run health check on the deployed slot
-            /opt/sofia-chat/scripts/health-check.sh check $TARGET_COLOR
-
-            if [ $? -eq 0 ]; then
-              echo "✅ Deployment saludable en slot $TARGET_COLOR"
-            else
-              echo "❌ Problemas detectados en slot $TARGET_COLOR"
-              exit 1
-            fi
-
-      - name: Update DNS configuration (if needed)
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ env.DEPLOY_HOST }}
-          username: ${{ env.DEPLOY_USER }}
-          key: ${{ env.SSH_KEY }}
-          port: 22
-          script: |
-            # Ensure internal domain is configured
-            if ! grep -q "internal-dev-sofia-chat.sofiacall.com" /etc/nginx/sites-enabled/internal-backend.conf 2>/dev/null; then
-              echo "Configurando dominio interno para pruebas..."
-
-              # Create SSL certificate for internal domain if not exists
-              if [ ! -f /etc/letsencrypt/live/internal-dev-sofia-chat.sofiacall.com/fullchain.pem ]; then
-                echo "AVISO: Certificado SSL para internal-dev-sofia-chat.sofiacall.com no encontrado"
-                echo "Ejecutar manualmente: certbot --nginx -d internal-dev-sofia-chat.sofiacall.com"
-              fi
-            fi
-
-      - name: Create deployment summary
+      - name: Show deployment summary
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.DEPLOY_HOST }}
@@ -239,34 +140,35 @@ jobs:
           port: 22
           script: |
             echo "=================================="
-            echo "   DEPLOYMENT SUMMARY"
+            echo "   BLUE-GREEN DEPLOYMENT SUMMARY"
             echo "=================================="
-            echo "Commit: ${{ steps.image_tag.outputs.commit_sha }}"
-            echo "Image Tag: ${{ steps.image_tag.outputs.tag }}"
-            echo "Current Production: ${{ steps.status_check.outputs.current_state }}"
-            echo "Deployed to Slot: ${{ steps.status_check.outputs.target_color }}"
+            echo "Acción ejecutada: ${{ github.event.inputs.action || 'deploy' }}"
+            echo "Commit: $(cd ${{ env.PROJECT_PATH }} && git rev-parse --short HEAD)"
+            echo "Timestamp: $(date)"
             echo "=================================="
             echo ""
-            echo "🔍 Para probar el nuevo deployment:"
-            echo "   https://internal-dev-sofia-chat.sofiacall.com"
+            
+            # Show current status
+            /opt/sofia-chat/blue-green-simple.sh status
+            
             echo ""
-            echo "✅ Si las pruebas son exitosas, ejecutar switch:"
-            echo "   /opt/sofia-chat/scripts/blue-green-control.sh switch"
+            echo "🔧 Comandos disponibles:"
+            echo "  - Ver estado: /opt/sofia-chat/blue-green-simple.sh status"
+            echo "  - Hacer switch: /opt/sofia-chat/blue-green-simple.sh switch"
+            echo "  - Rollback: /opt/sofia-chat/blue-green-simple.sh rollback"
+            echo "  - Limpiar: /opt/sofia-chat/blue-green-simple.sh cleanup"
             echo ""
-            echo "❌ Si hay problemas, descartar deployment:"
-            echo "   /opt/sofia-chat/scripts/blue-green-control.sh cleanup"
-            echo ""
-            echo "📊 Ver estado actual:"
-            echo "   /opt/sofia-chat/scripts/blue-green-control.sh status"
-            echo "=================================="
+            echo "🌐 URLs de prueba:"
+            echo "  - Blue (3001): http://dev-sofia-chat.sofiacall.com:3001/health"
+            echo "  - Green (3002): http://dev-sofia-chat.sofiacall.com:3002/health"
 
-  notify-deployment:
-    needs: build-and-deploy
+  notify-result:
+    needs: blue-green-deployment
     runs-on: ubuntu-latest
     if: always()
 
     steps:
-      - name: Notify deployment status
+      - name: Notify deployment result
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.DEPLOY_HOST }}
@@ -274,11 +176,12 @@ jobs:
           key: ${{ env.SSH_KEY }}
           port: 22
           script: |
-            if [ "${{ needs.build-and-deploy.result }}" = "success" ]; then
+            if [ "${{ needs.blue-green-deployment.result }}" = "success" ]; then
               echo "✅ Blue-Green deployment completado exitosamente"
-              echo "🧪 Nuevo código disponible para pruebas en internal-dev-sofia-chat.sofiacall.com"
-              echo "⚠️  Requiere switch manual para pasar a producción"
+              echo "📋 Ejecuta '/opt/sofia-chat/blue-green-simple.sh status' para ver el estado actual"
             else
               echo "❌ Error en Blue-Green deployment"
               echo "🔍 Revisar logs para más detalles"
+              echo "📋 Estado actual:"
+              /opt/sofia-chat/blue-green-simple.sh status || echo "No se pudo obtener el estado"
             fi
