--- a/.github/workflows/deploy-dev-blue-green.yml
+++ b/.github/workflows/deploy-dev-blue-green.yml
@@ -39,18 +39,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Copy blue-green script to server
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ env.DEPLOY_HOST }}
-          username: ${{ env.DEPLOY_USER }}
-          key: ${{ env.SSH_KEY }}
-          port: 22
-          source: 'scripts/blue-green-simple.sh'
-          target: '/opt/sofia-chat/'
-          strip_components: 1
-
-      - name: Make script executable
+      - name: Verify blue-green scripts exist
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.DEPLOY_HOST }}
@@ -58,7 +47,11 @@ jobs:
           key: ${{ env.SSH_KEY }}
           port: 22
           script: |
-            chmod +x /opt/sofia-chat/blue-green-simple.sh
+            if [ ! -f "/opt/sofia-chat/scripts/blue-green-control.sh" ]; then
+              echo "ERROR: Blue-green scripts not found in server"
+              exit 1
+            fi
+            echo "Blue-green scripts found on server"
 
       - name: Update repository and environment
         uses: appleboy/ssh-action@master
@@ -127,8 +120,8 @@ jobs:
 
             echo "Ejecutando acción Blue-Green: $ACTION"
 
-            # Execute the blue-green script
-            /opt/sofia-chat/blue-green-simple.sh $ACTION
+            # Execute the blue-green script that exists on server
+            /opt/sofia-chat/scripts/blue-green-control.sh $ACTION
 
       - name: Show deployment summary
         uses: appleboy/ssh-action@master
@@ -148,7 +141,7 @@ jobs:
             echo ""
 
             # Show current status
-            /opt/sofia-chat/blue-green-simple.sh status
+            /opt/sofia-chat/scripts/blue-green-control.sh status
 
             echo ""
             echo "🔧 Comandos disponibles:"
@@ -182,5 +175,5 @@ jobs:
               echo "❌ Error en Blue-Green deployment"
               echo "🔍 Revisar logs para más detalles"
               echo "📋 Estado actual:"
-              /opt/sofia-chat/blue-green-simple.sh status || echo "No se pudo obtener el estado"
+              /opt/sofia-chat/scripts/blue-green-control.sh status || echo "No se pudo obtener el estado"
             fi
