--- a/.github/workflows/deploy-dev-blue-green.yml
+++ b/.github/workflows/deploy-dev-blue-green.yml
@@ -39,7 +39,18 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Verify blue-green scripts exist
+      - name: Copy updated blue-green scripts to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ env.DEPLOY_HOST }}
+          username: ${{ env.DEPLOY_USER }}
+          key: ${{ env.SSH_KEY }}
+          port: 22
+          source: 'scripts/blue-green/*'
+          target: '/opt/sofia-chat/scripts/'
+          strip_components: 2
+
+      - name: Make scripts executable
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.DEPLOY_HOST }}
@@ -47,11 +58,8 @@ jobs:
           key: ${{ env.SSH_KEY }}
           port: 22
           script: |
-            if [ ! -f "/opt/sofia-chat/scripts/blue-green-control.sh" ]; then
-              echo "ERROR: Blue-green scripts not found in server"
-              exit 1
-            fi
-            echo "Blue-green scripts found on server"
+            chmod +x /opt/sofia-chat/scripts/*.sh
+            echo "Blue-green scripts updated and made executable"
 
       - name: Update repository and environment
         uses: appleboy/ssh-action@master
