--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,11 @@ services:
       - ./uploads:/app/uploads
       - ./logs/blue:/app/logs
     healthcheck:
-      test: ['CMD', 'curl', '-f', 'http://127.0.0.1:3001/api/health']
+      test: ['CMD', 'wget', '--quiet', '--spider', 'http://127.0.0.1:3001/api/health']
       interval: 10s
       timeout: 10s
       retries: 4
-      start_period: 10s
+      start_period: 5s
 
   # Green Environment (Secondary/Staging)
   sofia-chat-backend-green:
@@ -47,11 +47,11 @@ services:
     profiles:
       - green
     healthcheck:
-      test: ['CMD', 'curl', '-f', 'http://127.0.0.1:3001/api/health']
+      test: ['CMD', 'wget', '--quiet', '--spider', 'http://127.0.0.1:3001/api/health']
       interval: 10s
       timeout: 10s
       retries: 4
-      start_period: 10s
+      start_period: 5s
 
 networks:
   sofia_chat_network:
