fix: corregir todos los scripts blue-green para usar wget y /api/health
- Agregar blue-green-simple.sh desde servidor y corregirlo
- Cambiar curl por wget en todos los health checks
- Corregir endpoints de /health a /api/health en todos los scripts
- Actualizar URLs en workflow para mostrar endpoints correctos

--- a/.github/workflows/deploy-dev-blue-green.yml
+++ b/.github/workflows/deploy-dev-blue-green.yml
@@ -159,8 +159,8 @@ jobs:
             echo "  - Limpiar: /opt/sofia-chat/blue-green-simple.sh cleanup"
             echo ""
             echo "🌐 URLs de prueba:"
-            echo "  - Blue (3001): http://dev-sofia-chat.sofiacall.com:3001/health"
-            echo "  - Green (3002): http://dev-sofia-chat.sofiacall.com:3002/health"
+            echo "  - Blue (3001): http://dev-sofia-chat.sofiacall.com:3001/api/health"
+            echo "  - Green (3002): http://dev-sofia-chat.sofiacall.com:3002/api/health"
 
   notify-result:
     needs: blue-green-deployment
