Add git reset to ensure working files are in sync
The change ensures file synchronization before deployment by adding a git reset
command to force working files to match HEAD state, preventing stale files from
being included in Docker builds.

--- a/.github/workflows/deploy-dev-blue-green.yml
+++ b/.github/workflows/deploy-dev-blue-green.yml
@@ -71,10 +71,11 @@ jobs:
           script: |
             cd ${{ env.PROJECT_PATH }}
 
-            # Pull latest changes
+            # Pull latest changes and ensure working files are synchronized
             git fetch origin
             git checkout develop-v1
             git pull origin develop-v1
+            git reset --hard HEAD
 
             # Create environment file with proper quoting
             cat > .env << 'ENV_EOF'
