--- a/.github/workflows/deploy-dev-blue-green.yml
+++ b/.github/workflows/deploy-dev-blue-green.yml
@@ -156,7 +156,7 @@ jobs:
             echo "Ejecutando acción Blue-Green: $ACTION"
 
             # Execute the blue-green script from project directory
-            PROJECT_DIR=${{ env.PROJECT_PATH }} /opt/sofia-chat/scripts/blue-green-control.sh $ACTION
+            PROJECT_DIR=/opt/sofia-chat/scripts/blue-green-control.sh $ACTION
 
             echo "=== VERIFICACIÓN POST-DEPLOY ==="
             echo "Verificando estado de contenedores después del deploy:"
