--- a/.github/workflows/deploy-dev-blue-green.yml
+++ b/.github/workflows/deploy-dev-blue-green.yml
@@ -155,8 +155,8 @@ jobs:
             echo "=== EJECUTANDO BLUE-GREEN ACTION ==="
             echo "Ejecutando acción Blue-Green: $ACTION"
 
-            # Execute the blue-green script from project directory
-            PROJECT_DIR=/opt/sofia-chat/scripts/blue-green-control.sh $ACTION
+            # Execute the blue-green script with correct PROJECT_DIR
+            PROJECT_DIR=${{ env.PROJECT_PATH }} /opt/sofia-chat/scripts/blue-green-control.sh $ACTION
 
             echo "=== VERIFICACIÓN POST-DEPLOY ==="
             echo "Verificando estado de contenedores después del deploy:"
