--- a/.github/workflows/deploy-dev-blue-green.yml
+++ b/.github/workflows/deploy-dev-blue-green.yml
@@ -39,14 +39,25 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Copy updated blue-green scripts to server
+      - name: Copy blue-green-simple script to server
         uses: appleboy/scp-action@master
         with:
           host: ${{ env.DEPLOY_HOST }}
           username: ${{ env.DEPLOY_USER }}
           key: ${{ env.SSH_KEY }}
           port: 22
-          source: 'scripts/blue-green/*'
+          source: 'scripts/blue-green/blue-green-simple.sh'
+          target: '/opt/sofia-chat/'
+          strip_components: 2
+
+      - name: Copy helper scripts to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ env.DEPLOY_HOST }}
+          username: ${{ env.DEPLOY_USER }}
+          key: ${{ env.SSH_KEY }}
+          port: 22
+          source: 'scripts/blue-green/update-prod-config.sh'
           target: '/opt/sofia-chat/scripts/'
           strip_components: 2
 
@@ -58,6 +69,7 @@ jobs:
           key: ${{ env.SSH_KEY }}
           port: 22
           script: |
+            chmod +x /opt/sofia-chat/blue-green-simple.sh
             chmod +x /opt/sofia-chat/scripts/*.sh
             echo "Blue-green scripts updated and made executable"
 
@@ -143,20 +155,20 @@ jobs:
             echo "Commit a deployar: $(git rev-parse --short HEAD)"
             echo "Timestamp: $(date)"
             echo "Directorio del proyecto: ${{ env.PROJECT_PATH }}"
-            echo "Script a ejecutar: /opt/sofia-chat/scripts/blue-green-control.sh"
+            echo "Script a ejecutar: /opt/sofia-chat/blue-green-simple.sh"
 
             # Verificar que el script existe
-            if [[ ! -f "/opt/sofia-chat/scripts/blue-green-control.sh" ]]; then
-                echo "ERROR: Script no encontrado en /opt/sofia-chat/scripts/blue-green-control.sh"
-                ls -la /opt/sofia-chat/scripts/
+            if [[ ! -f "/opt/sofia-chat/blue-green-simple.sh" ]]; then
+                echo "ERROR: Script no encontrado en /opt/sofia-chat/blue-green-simple.sh"
+                ls -la /opt/sofia-chat/
                 exit 1
             fi
 
             echo "=== EJECUTANDO BLUE-GREEN ACTION ==="
             echo "Ejecutando acción Blue-Green: $ACTION"
 
-            # Execute the blue-green script with correct PROJECT_DIR
-            PROJECT_DIR=${{ env.PROJECT_PATH }} /opt/sofia-chat/scripts/blue-green-control.sh $ACTION
+            # Execute the blue-green script
+            /opt/sofia-chat/blue-green-simple.sh $ACTION
 
             echo "=== VERIFICACIÓN POST-DEPLOY ==="
             echo "Verificando estado de contenedores después del deploy:"
@@ -191,7 +203,7 @@ jobs:
             echo ""
 
             # Show current status
-            /opt/sofia-chat/scripts/blue-green-control.sh status
+            /opt/sofia-chat/blue-green-simple.sh status
 
             echo ""
             echo "=== VERIFICACIÓN DE SALUD ==="
@@ -220,10 +232,10 @@ jobs:
 
             echo ""
             echo "🔧 Comandos disponibles:"
-            echo "  - Ver estado: /opt/sofia-chat/scripts/blue-green-control.sh status"
-            echo "  - Hacer switch: /opt/sofia-chat/scripts/blue-green-control.sh switch"
-            echo "  - Rollback: /opt/sofia-chat/scripts/blue-green-control.sh rollback"
-            echo "  - Limpiar: /opt/sofia-chat/scripts/blue-green-control.sh cleanup"
+            echo "  - Ver estado: /opt/sofia-chat/blue-green-simple.sh status"
+            echo "  - Hacer switch: /opt/sofia-chat/blue-green-simple.sh switch"
+            echo "  - Rollback: /opt/sofia-chat/blue-green-simple.sh rollback"
+            echo "  - Limpiar: /opt/sofia-chat/blue-green-simple.sh cleanup"
             echo ""
             echo "🌐 URLs de prueba:"
             echo "  - Blue (3001): http://dev-sofia-chat.sofiacall.com:3001/api/health"
@@ -252,5 +264,5 @@ jobs:
               echo "❌ Error en Blue-Green deployment"
               echo "🔍 Revisar logs para más detalles"
               echo "📋 Estado actual:"
-              /opt/sofia-chat/scripts/blue-green-control.sh status || echo "No se pudo obtener el estado"
+              /opt/sofia-chat/blue-green-simple.sh status || echo "No se pudo obtener el estado"
             fi
